--- a/shares-portal/src/main/resources/static/question/detail_teacher.html
+++ b/shares-portal/src/main/resources/static/question/detail_teacher.html
@@ -296,16 +296,16 @@
                   </div>
                   <div class="card-footer">
 
-                    <p class="text-success fa fa-comment">1条评论</p>
+                    <p class="text-success fa fa-comment"><span v-text="answer.comments.length">1</span>条评论</p>
                     <ul class="list-unstyled mt-3">
-                      <li class="media my-2">
+                      <li class="media my-2" v-for="comment in answer.comments">
                         <img style="width: 50px;height: 50px;border-radius: 50%;"
                              src="../img/user.jpg" class="mr-3"
                              alt="...">
                         <div class="media-body">
-                          <h6 class="mt-0 mb-1"><span>李四</span>:</h6>
+                          <h6 class="mt-0 mb-1"><span v-text="comment.userNickName">李四</span>:</h6>
                           <p class="text-dark">
-                            <span class="text-monospace">
+                            <span class="text-monospace" v-text="comment.content">
                               明白了,谢谢老师！
                             </span>
                             <span class="font-weight-light text-info"
@@ -346,14 +346,14 @@
                       <a class="btn btn-primary mx-2"
                          href="#">采纳答案</a>
                       <a class="btn btn-outline-primary" data-toggle="collapse" href="#collapseExample1"
-                         role="button" aria-expanded="false" aria-controls="collapseExample">
+                         role="button" aria-expanded="false" aria-controls="collapseExample"
+                      :href="'#addComment'+answer.id">
                         <i class="fa fa-edit"></i>添加评论
                       </a>
-
                     </p>
-                    <div class="collapse" id="collapseExample1">
+                    <div class="collapse" id="collapseExample1" :id="'addComment'+answer.id">
                       <div class="card card-body border-light">
-                        <form action="#" method="post" class="needs-validation" novalidate>
+                        <form action="#" method="post" class="needs-validation" novalidate @submit.prevent="postComment(answer.id)">
                           <div class="form-group">
                             <textarea class="form-control" name="content" rows="3" required></textarea>
                             <div class="invalid-feedback">
