--- a/shares-portal/src/main/resources/static/question/detail_student.html
+++ b/shares-portal/src/main/resources/static/question/detail_student.html
@@ -43,7 +43,7 @@
 
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="../index_student.html">首页</a>
+        <a class="nav-item nav-link active" href="../index.html">首页</a>
         <a class="nav-item nav-link active" href="../personal/myQuestion.html">提问</a>
         <a class="nav-item nav-link active" href="../personal/task.html">任务</a>
         <a class="nav-item nav-link active" href="../personal/collect.html">收藏</a>
@@ -189,21 +189,15 @@
         <div class="row">
           <div class="col-2 px-0  ">
             <div class="container-fluid ">
-              <div class="row  mt-4 mx-0 px-0" >
-                <a class="btn btn-outline-danger btn-md rounded-lg fa fa-close " style="font-size: x-small">删除</a>
-              </div>
 
               <div class="row mt-4 mx-0 px-0" >
                 <a class="btn btn-outline-primary btn-md rounded-lg fa fa-edit " style="font-size: x-small"
                    href="../question/edit.html">编辑</a>
               </div>
-              <div class="row mt-4 mx-0 px-0">
-                <a class="btn btn-outline-info btn-md rounded-lg fa fa-pencil " style="font-size: x-small"
-                   href="#writeAnswer">回答</a>
-              </div>
+
               <div class="row mt-4 mx-0 px-0" id="collectApp">
                 <a class="btn btn-outline-secondary btn-md rounded-lg fa fa-star "
-                   style="font-size: x-small">收藏</a>
+                    style="font-size: x-small">收藏</a>
                 <a  class="btn btn-outline-secondary btn-md rounded-lg fa fa-star "
                     style="font-size: x-small;display: none" >已收藏</a>
               </div>
@@ -233,12 +227,12 @@
                 </div>
               </div>
               <p class=" px-0 text-center font-weight-bold" style="font-size: x-large"
-                 v-text="question.title">
+              v-text="question.title">
                 Java中方法重载和重写的区别
               </p>
 
               <div class="px-0 container-fluid question-content"
-                   v-html="question.content">
+              v-html="question.content">
                 请问的方法中重写和重载的区别都是什么，如何使用
               </div>
               <p class="text-right px-0 mt-5">
@@ -296,40 +290,41 @@
                   </div>
                   <div class="card-footer">
 
-                    <p class="text-success fa fa-comment">1条评论</p>
+                    <p class="text-success fa fa-comment"><span v-text="answer.comments.length">1</span>条评论</p>
                     <ul class="list-unstyled mt-3">
-                      <li class="media my-2">
+                      <li class="media my-2" v-for="(comment,index) in answer.comments">
                         <img style="width: 50px;height: 50px;border-radius: 50%;"
                              src="../img/user.jpg" class="mr-3"
                              alt="...">
                         <div class="media-body">
-                          <h6 class="mt-0 mb-1"><span>李四</span>:</h6>
+                          <h6 class="mt-0 mb-1"><span v-text="comment.userNickName">李四</span>:</h6>
                           <p class="text-dark">
-                            <span class="text-monospace">
+                            <span class="text-monospace" v-text="comment.content">
                               明白了,谢谢老师！
                             </span>
                             <span class="font-weight-light text-info"
                                   style="font-size: small"></span>
                             <a class="text-primary ml-2"
                                style="font-size: small" data-toggle="collapse" href="#editCommemt1"
-                               role="button" aria-expanded="false" aria-controls="collapseExample">
+                               role="button" aria-expanded="false" aria-controls="collapseExample" :href="'#editComment'+comment.id">
                               <i class="fa fa-edit"></i>编辑
                             </a>
                             <!--老师角色或者属于本用户的评论可以删除该评论-->
                             <a class="ml-2  fa fa-close " style="font-size: small"
                                data-toggle="collapse"  role="button"
-                               aria-expanded="false" aria-controls="collapseExample">
+                               aria-expanded="false" aria-controls="collapseExample" onclick="$(this).next().toggle(100)">
                               删除
                             </a>
+                            <a class="badge badge-pill badge-danger text-white" style="display: none;cursor: pointer" @click="removeComment(comment.id,index,answer.comments)"><i class="fa fa-close"></i></a>
 
                           </p>
-                          <div class="collapse" id="editCommemt1">
+                          <div class="collapse" id="editCommemt1" :id="'editComment'+comment.id">
                             <div class="card card-body border-light">
-                              <form action="" method="post" class="needs-validation" novalidate>
+                              <form action="" method="post" class="needs-validation" novalidate @submit.prevent="updateComment(comment.id,answer.id,index,answer.comments)">
                                 <div class="form-group">
                                   <textarea class="form-control"
                                             id="textareaComment1" name="content" rows="4"
-                                            required></textarea>
+                                            required v-text="comment.content"></textarea>
                                   <div class="invalid-feedback">
                                     内容不能为空！
                                   </div>
@@ -343,17 +338,18 @@
 
                     </ul>
                     <p class="text-left text-dark">
-                      <a class="btn btn-primary mx-2"
-                         href="#">采纳答案</a>
+                      <a class="btn btn-primary mx-2 text-white"
+                          onclick="$(this).next().toggle(100)">采纳答案</a>
+                      <a class="badge badge-pill badge-success text-white" style="display: none;cursor: pointer" @click="answerSolved(answer.id)"><i class="fa fa-check"></i></a>
                       <a class="btn btn-outline-primary" data-toggle="collapse" href="#collapseExample1"
-                         role="button" aria-expanded="false" aria-controls="collapseExample">
+                         role="button" aria-expanded="false" aria-controls="collapseExample"
+                      :href="'#addComment'+answer.id">
                         <i class="fa fa-edit"></i>添加评论
                       </a>
-
                     </p>
-                    <div class="collapse" id="collapseExample1">
+                    <div class="collapse" id="collapseExample1" :id="'addComment'+answer.id">
                       <div class="card card-body border-light">
-                        <form action="#" method="post" class="needs-validation" novalidate>
+                        <form action="#" method="post" class="needs-validation" novalidate @submit.prevent="postComment(answer.id)">
                           <div class="form-group">
                             <textarea class="form-control" name="content" rows="3" required></textarea>
                             <div class="invalid-feedback">
@@ -371,25 +367,6 @@
 
             </div><!--列出所有的答案-end-->
             <!--如果没有回答问题的权限就不显示回答框-->
-            <div class="container-fluid mt-4" id="postAnswerApp">
-              <h5 class="text-info mb-2"><i class="fa fa-edit"></i>写答案</h5>
-              <form action="#" method="post" enctype="application/x-www-form-urlencoded"
-                    class="needs-validation" novalidate @submit.prevent="postAnswer">
-                <div class="form-group">
-                  <textarea id="summernote" name="content" required ></textarea>
-                  <div class="invalid-feedback" :class="{'d-block':hasError}">
-                    <h5 v-text="message">回答内容不能为空！</h5>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <p class="text-right">
-                    <button type="submit" class="btn btn-primary">提交回答</button>
-                  </p>
-
-                </div>
-              </form>
-
-            </div>
 
           </div>
 
@@ -446,8 +423,8 @@
     $('select').select2({placeholder:'请选择...'});
   });
 </script>
+</body>
 <script src="../js/utils.js"></script>
 <script src="../js/question_detail.js"></script>
 <script src="../js/related_question.js"></script>
-</body>
 </html>
