--- a/shares-portal/src/main/resources/static/resetpassword.html
+++ b/shares-portal/src/main/resources/static/resetpassword.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="renderer" content="webkit">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>达内知道重置密码</title>
+  <title>好享知道重置密码</title>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="bower_components/summernote/dist/summernote-bs4.min.css">
@@ -29,7 +29,7 @@
   <div class="row">
     <div class="mx-auto mt-5">
 
-      <h2 class="text-center"><b>达内</b>·知道</h2>
+      <h2 class="text-center"><b>好享</b></h2>
       <div class="bg-white p-4">
         <p class="text-center"><b>手机找回密码</b></p>
         <form>
