--- a/shares-client/src/main/resources/static/login.html
+++ b/shares-client/src/main/resources/static/login.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/login.css" >
 </head>
 <body class="bg-light">
-<div class="container-fluid">
+<div class="container-fluid" id="loginApp">
   <div class="row">
     <div class="mx-auto mt-5" style="width: 400px;">
       <h2 class="text-center "><b>好享</b></h2>
@@ -27,13 +27,13 @@
         <div id="register" class="alert alert-info d-none">
           <i class="fa fa-exclamation-triangle"></i> 已经成功注册，请登录。
         </div>
-        <form action="/login" method="post">
+        <form action="/login" method="post" @submit.prevent="login">
           <div class="form-group has-icon">
-            <input type="text" class="form-control d-inline" name="username" placeholder="手机号">
+            <input type="text" v-model="username" class="form-control d-inline" name="username" placeholder="手机号">
             <span class="fa fa-phone form-control-icon"></span>
           </div>
           <div class="form-group has-icon">
-            <input type="password" class="form-control" name="password" placeholder="密码">
+            <input type="password" v-model="password" class="form-control" name="password" placeholder="密码">
             <span class="fa fa-lock form-control-icon"></span>
           </div>
           <button type="submit" class="btn btn-primary btn-block ">登录</button>
@@ -46,6 +46,8 @@
 </div>
 <script src="bower_components/jquery/dist/jquery.js" ></script>
 <script src="bower_components/bootstrap/dist/js/bootstrap.js" ></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/vue/2.7.6/vue.min.js"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/axios/1.0.0-alpha.1/axios.min.js"></script>
 <script>
   if (location.search == "?error"){
     $("#error").removeClass("d-none");
@@ -56,6 +58,34 @@
   if (location.search == "?register"){
     $("#register").removeClass("d-none");
   }
+
+  let loginApp = new Vue({
+    el:"#loginApp",
+    data:{
+      username:"",
+      password:"",
+    },
+    created(){},
+    methods:{
+      login(){
+        let form = new FormData()
+        form.append("client_id","shares")
+        form.append("client_secret","921")
+        form.append("grant_type","password")
+        form.append("username",this.username)
+        form.append("password",this.password)
+        axios.post("http://localhost:9000/oauth/token",form).then(function (response) {
+          console.log(response.data.access_token)
+          //localStorage浏览器保存信息
+          window.localStorage.setItem("accessToken",response.data.access_token)
+          //跳转到身份判断页
+          location.href="/index.html"
+        }).catch(function (error) {
+          console.log(error)
+        })
+      }
+    },
+  })
 </script>
 </body>
 </html>
